--- a/AVL-tree/AVL-tree.vcxproj.filters
+++ b/AVL-tree/AVL-tree.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="AVL-tree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AVL-tree.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
