Completed v1 class declaration and writed draft members definition

--- a/AVL-tree/AVL-tree.vcxproj.filters
+++ b/AVL-tree/AVL-tree.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="AVL-tree.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tree-operations.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
