--- a/AVL-tree-test/AVL-tree-test.vcxproj.filters
+++ b/AVL-tree-test/AVL-tree-test.vcxproj.filters
@@ -31,4 +31,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="test-main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="test-int.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
