--- a/AVL-tree-test/AVL-tree-test.vcxproj.filters
+++ b/AVL-tree-test/AVL-tree-test.vcxproj.filters
@@ -15,6 +15,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="test-int.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="test-functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
     <ClInclude Include="..\AVL-tree\AVL-tree.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -30,13 +38,8 @@
     <ClInclude Include="..\AVL-tree\print-int.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="test-main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="test-int.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClInclude Include="test-functions.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
