--- a/AVL-tree-test/AVL-tree-test.vcxproj.filters
+++ b/AVL-tree-test/AVL-tree-test.vcxproj.filters
@@ -15,13 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test-int.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="test-functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\AVL-tree\dictionary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="test-main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\AVL-tree\functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
