--- a/AVL-tree-test/AVL-tree-test.vcxproj
+++ b/AVL-tree-test/AVL-tree-test.vcxproj
@@ -143,7 +143,9 @@
     <ClCompile Include="..\AVL-tree\dictionary.cpp" />
     <ClCompile Include="..\AVL-tree\functions.cpp" />
     <ClCompile Include="test-functions.cpp" />
+    <ClCompile Include="test-int.cpp" />
     <ClCompile Include="test-main.cpp" />
+    <ClCompile Include="test-word-oper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\AVL-tree\AVL-tree.hpp" />
