--- a/AVL-tree/AVL-tree.vcxproj.filters
+++ b/AVL-tree/AVL-tree.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="test-functions.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="interface.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dictionary.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="test-main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="interface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
